--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.5",
+    "firebase": "^10.13.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-calendar-events": "^2.2.0",
