--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@expo/vector-icons": "^14.0.2",
     "@mui/icons-material": "^6.0.0",
     "@mui/material": "^6.0.0",
+    "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-google-signin/google-signin": "^13.0.0",
@@ -22,6 +24,7 @@
     "@react-navigation/stack": "^6.4.1",
     "axios": "^1.7.5",
     "firebase": "^10.13.1",
+    "moment": "^2.30.1",
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-calendar-events": "^2.2.0",
