--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-native-firebase/app": "^20.4.0",
     "@react-native-firebase/auth": "^20.4.0",
     "@react-native-google-signin/google-signin": "^13.0.0",
+    "@react-native-picker/picker": "^2.8.0",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/stack": "^6.4.1",
@@ -28,7 +29,7 @@
     "react": "18.3.1",
     "react-native": "0.75.2",
     "react-native-calendar-events": "^2.2.0",
-    "react-native-gesture-handler": "^2.18.1",
+    "react-native-gesture-handler": "^2.19.0",
     "react-native-paper": "^5.12.5",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.9",
