working on linkedin login

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,8 +25,14 @@
         android:windowSoftInputMode="adjustResize"
         android:exported="true">
         <intent-filter>
+            <action android:name="android.intent.action.VIEW" />
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
+
+             <category android:name="android.intent.category.DEFAULT" />
+             <category android:name="android.intent.category.BROWSABLE" />
+
+            <data android:scheme="https://capstone-project-432506-default-rtdb.firebaseio.com" android:host="linkedin/callback" />
         </intent-filter>
       </activity>
     </application>
