--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-native-calendar-events": "^2.2.0",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.19.0",
+    "react-native-linkedin": "^2.1.1",
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^4.1.5",
     "react-native-qrcode-scanner": "^1.5.5",
