--- a/ios/Podfile
+++ b/ios/Podfile
@@ -16,14 +16,24 @@ if linkage != nil
   use_frameworks! :linkage => linkage.to_sym
 end
 
+require_relative '../node_modules/react-native-permissions/scripts/setup'
+
 target 'AwesomeProject' do
   config = use_native_modules!
+
+  setup_permissions([
+    'Camera',
+    # Add any other permissions you need
+  ])
 
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
+
+  permissions_path = '../node_modules/react-native-permissions/ios'
+  
 
   target 'AwesomeProjectTests' do
     inherit! :complete
