--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,9 @@ yarn-error.log
 !.yarn/releases
 !.yarn/sdks
 !.yarn/versions
+
+# Environment variables
+.env
+
+# Google Services
+google-services.json
