--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native": "0.75.2",
     "react-native-calendar-events": "^2.2.0",
     "react-native-camera": "^4.2.1",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "^2.19.0",
     "react-native-paper": "^5.12.5",
     "react-native-permissions": "^4.1.5",
